--- a/app/src/settings-components/settings.css
+++ b/app/src/settings-components/settings.css
@@ -1,18 +1,20 @@
 .setting {
   display: grid;
-  padding: 1rem;
-  padding-top: 2.5rem;
+  height: 100%;
+  padding-block: 2.5rem;
   grid-template-columns: 30% 1fr;
 }
 
 .main-settings {
   display: grid;
-  gap: 1rem;
-  padding-left: 2rem;
+  gap: 2.5rem;
+  text-align: center;
+  height: max-content;
 }
 
 .account-settings {
   display: grid;
+  grid-template-rows: repeat(2, max-content);
   gap: 2rem;
 }
 .form-title {
