--- a/app/src/user/user.css
+++ b/app/src/user/user.css
@@ -7,6 +7,13 @@
   grid-template-columns: clamp(320px, 60vw, 680px);
 }
 
+.not_found {
+  display: grid;
+  place-content: center;
+  height: 100%;
+  font-size: 2rem;
+}
+
 .profile .content {
   box-shadow: 0 0.2rem 1rem rgb(0, 0, 0);
 }
@@ -106,13 +113,13 @@
   justify-content: space-between;
   padding: 2rem;
   border-top: 2px solid rgb(53, 4, 68);
-  background-color: #14081f;
+  background-color: #130524de;
   column-gap: 2rem;
 }
 
 .profile .tools input {
   width: 100%;
-  box-shadow: 0 0.1rem 1rem -0.2rem #bf80ff;
+  box-shadow: 0 0 .5rem 0rem #bf80ff;
   background-color: rgba(61, 56, 56, 0.589);
   border-radius: var(--input-border-r);
   padding: var(--input-padding);
@@ -127,7 +134,7 @@
 }
 .profile .messages-window {
   height: 500px;
-  background-color: rgba(22, 20, 20, 0.322);
+  background-color: rgba(15, 13, 13, 0.712);
 }
 .profile .messages {
   display: grid;
@@ -222,6 +229,9 @@
 }
 .edit-profile-window {
   display: grid;
+  border-radius: 0.5rem;
+  padding: 2rem;
+  border: 2px solid greenyellow;
   row-gap: 1rem;
 }
 .edit-profile-window .banner {
@@ -253,18 +263,28 @@
 
 .edit-profile-window .avatar::before,
 .edit-profile-window .banner::before {
-  content: url("./images/add_new_photo.svg");
+  content: "";
+  background-image: url("/images/add_new_photo.svg");
+  background-repeat: no-repeat;
+  background-position: center;
   display: grid;
   place-content: center;
   cursor: pointer;
   border: 4px solid orange;
   border-radius: 50%;
   position: absolute;
-  top: calc(50% - 2rem);
-  left: calc(50% - 2rem);
-  width: 4rem;
+  top: calc(50% - 1.25rem);
+  left: calc(50% - 1.25rem);
+  width: 2.5rem;
   backdrop-filter: blur(200px);
   aspect-ratio: 1/1;
+  transition: scale 100ms ease-out;
+}
+.edit-profile-window
+  .avatar:is(:hover, :focus, :focus-visible, :focus-within)::before,
+.edit-profile-window
+  .banner:is(:hover, :focus, :focus-visible, :focus-within)::before {
+  scale: 1.2;
 }
 
 .edit-profile-window .confirm {
@@ -280,6 +300,7 @@
   filter: brightness(50%);
   scale: 1.2;
 }
+
 
 @media (width < 560px) {
   .user {
