--- a/client/src/account/account.css
+++ b/client/src/account/account.css
@@ -50,7 +50,6 @@
     rgba(34, 4, 29, 1) 82%,
     rgba(0, 0, 0, 1) 100%
   );
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#229be4",endColorstr="#000000",GradientType=1);
 
   width: clamp(416px, 60vw, 680px);
   display: grid;
@@ -212,7 +211,7 @@
 .account .warning {
   position: absolute;
   height: 1rem;
-  bottom: -1.5rem;
+  bottom: 20%;
   left: 0;
   right: 0;
   color: orange;
@@ -265,7 +264,7 @@
   }
 
   .code-container {
-    padding:0;
+    padding: 0;
   }
   .account form {
     max-width: calc(100vw - 4px);
@@ -296,6 +295,7 @@
 
 .confirm-code {
   display: grid;
+  height: 100dvh;
   text-align: center;
   place-content: center;
   gap: 1rem;
